Fixes positioning of navigation toggle on tablet. Ticket DT-767

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -768,6 +768,10 @@ input[type="search"]::-webkit-search-decoration {
 
 // Tablet
 @media @tablet {
+	.widget .extendednavigation a.pull {
+		right: 10px;
+		top: 22px;
+	}
 	.widget .extendednavigation a.pull:after {
 		top: 3px;
 		right: 7px;
